--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env:lolin32]
 platform = espressif32
 framework = arduino
-board = lolin32
+board = esp32dev
 build_flags = '-fexceptions'
 ; Please see "secrets.load.sample" and copy it file to secrets.load
 src_build_flags = !echo "-DSRC_REV="$(git rev-list --all --count HEAD && ./secrets.load)
