Accepts base32 string auto-sleep

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ platform = espressif32
 framework = arduino
 board = esp32dev
 build_flags = '-fexceptions'
+monitor_speed = 115200
 ; Please see "secrets.load.sample" and copy it file to secrets.load
 src_build_flags = !echo "-DSRC_REV="$(git rev-list --all --count HEAD && ./secrets.load)
 #extra_scripts = pre:extra_script.py
