Made Google Export Parser (Parses export QR strings into input strings)

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,8 @@ lib_deps =
     ;ESP8266_SSD1306
     2978
     https://github.com/mikeazo/TOTP-Arduino
+    Adafruit GFX Library
+    adafruit/Adafruit SSD1306
 
 ;targets = upload
 ; any port that starts with /dev/ttyUSB
